# CitrusDrop

./: .gitignore  CitrusDrop.py  IdolNameList.py  LICENSE  Makefile  Pipfile  Procfile  README.md  asynctest.py  citrusdroptest.py  idol_name_list.json  main.py  main_test.py  sample.py  setup.cfg  setup.py  tox.ini
citrus_drop/: __init__.py  citrus_drop.py
static/: 101991197.json  101991197_old.json  test.json  test2.json
templates/: donut.html  index.html  layout.html  main.html
tests/: test_citrus_drop.py
